scraper-plugins/scraper-plugins-core/src/test/resources/scraper/plugins/core/typechecker/ok/mapjoin5.yf
---
name: mapjoin
graphs:
  start:
    - type: RegexNode
      regex: "a"
      content: "content"
      groups: {}
      output: details

    - type: MapJoinNode
      list: "{details}"
      mapTarget: X
      putElement: actdetail
      keys:
        enriched: final

  X:
    - type: EchoNode
      put: enriched
      value:
        url: "mypage.com{{actdetail}@url}"
        name: "{{actdetail}@name}"
        id: "{{actdetail}@id}"


