scraper-plugins/scraper-plugins-core/src/test/resources/scraper/plugins/core/typechecker/fail/mapjoin5.yf
---
name: mapjoin
graphs:
  start:
    - type: MapJoinNode
      list: [["A"], ["B"]]
      mapTarget: X
      putElement: "element"
      keys: {}

  X:
    - type: StringContainsNode
      regex: ""
      content: "{element}"


